<resources>
    <string name="app_name">Currency Exchange Live</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate_us">Rate us</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="hint_et_value">1</string>
    <string name="text_select_country">Select Country Currency</string>
    <string name="title_curr_list">Currency List</string>
    <string name="lbl_to">To</string>
    <string name="action_reverse">Reverse</string>
    <string name="action_convert">Convert</string>
    <string name="txt_result_value">Exchange Value</string>
    <string name="msg_no_internet">Sorry! Not connected to internet</string>
    <string name="msg_select_diff_curr">Please Select Different Currency</string>
    <string name="msg_loading">Please wait…</string>
    <string name="share_subject">Message to recipient</string>
    <string name="share_using">Share using</string>
    <string name="toast_enter_currency">Please select the country currency</string>
    <string name="action_search">Search</string>
    <string name="text_share">Check out Currency Exchange live for live exchange rates. Download it today from https://play.google.com/store/apps/details?id=</string>


    <!--<string name="banner_ad_unit_id">ca-app-pub-3544178398657157/5320923429</string>-->
    <!--<string name="ad_unit_id">ca-app-pub-3544178398657157/6797656628</string>-->

    // test admob
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string-array name="currency_list">
        <item>USD - US dollar</item>
        <item>EUR - EU euro</item>
        <item>GBP - British pound</item>
        <item>INR - Indian rupee</item>
        <item>AUD - Australian dollar</item>
        <item>CAD - Canadian dollar</item>
        <item>MYR - Malaysian ringgit</item>
        <item>CHF - Swiss franc</item>
        <item>CNY - Chinese yuan renminbi</item>
        <item>THB - Thai baht</item>
        <item>AED - UAE dirham</item>
        <item>AFA - Afghanistan afghani</item>
        <item>ALL - Albanian lek</item>
        <item>DZD - Algerian dinar</item>
        <item>AOR - Angolan kwanza reajustado</item>
        <item>ARS - Argentine peso</item>
        <item>AMD - Armenian dram</item>
        <item>AWG - Aruban guilder</item>
        <item>AZN - Azerbaijanian new manat</item>
        <item>BSD - Bahamian dollar</item>
        <item>BHD - Bahraini dinar</item>
        <item>BDT - Bangladeshi taka</item>
        <item>BBD - Barbados dollar</item>
        <item>BYR - Belarusian ruble</item>
        <item>BZD - Belize dollar</item>
        <item>BMD - Bermudian dollar</item>
        <item>BTN - Bhutan ngultrum</item>
        <item>BOB - Bolivian boliviano</item>
        <item>BWP - Botswana pula</item>
        <item>BRL - Brazilian real</item>
        <item>BND - Brunei dollar</item>
        <item>BGN - Bulgarian lev</item>
        <item>BIF - Burundi franc</item>
        <item>KHR - Cambodian riel</item>
        <item>CVE - Cape Verde escudo</item>
        <item>KYD - Cayman Islands dollar</item>
        <item>XOF - CFA franc BCEAO</item>
        <item>XAF - CFA franc BEAC</item>
        <item>XPF - CFP franc</item>
        <item>CLP - Chilean peso</item>
        <item>COP - Colombian peso</item>
        <item>KMF - Comoros franc</item>
        <item>CDF - Congolese franc</item>
        <item>CRC - Costa Rican colon</item>
        <item>HRK - Croatian kuna</item>
        <item>CUP - Cuban peso</item>
        <item>CZK - Czech koruna</item>
        <item>DKK - Danish krone</item>
        <item>DJF - Djibouti franc</item>
        <item>DOP - Dominican peso</item>
        <item>XCD - East Caribbean dollar</item>
        <item>EGP - Egyptian pound</item>
        <item>SVC - El Salvador colon</item>
        <item>ERN - Eritrean nakfa</item>
        <item>EEK - Estonian kroon</item>
        <item>ETB - Ethiopian birr</item>
        <item>FKP - Falkland Islands pound</item>
        <item>FJD - Fiji dollar</item>
        <item>GMD - Gambian dalasi</item>
        <item>GEL - Georgian lari</item>
        <item>GHS - Ghanaian new cedi</item>
        <item>GIP - Gibraltar pound</item>
        <item>XAU - Gold (ounce)</item>
        <item>XFO - Gold franc</item>
        <item>GTQ - Guatemalan quetzal</item>
        <item>GNF - Guinean franc</item>
        <item>GYD - Guyana dollar</item>
        <item>HTG - Haitian gourde</item>
        <item>HNL - Honduran lempira</item>
        <item>HKD - Hong Kong SAR dollar</item>
        <item>HUF - Hungarian forint</item>
        <item>ISK - Icelandic krona</item>
        <item>XDR - IMF special drawing right</item>
        <item>IDR - Indonesian rupiah</item>
        <item>IRR - Iranian rial</item>
        <item>IQD - Iraqi dinar</item>
        <item>ILS - Israeli new shekel</item>
        <item>JMD - Jamaican dollar</item>
        <item>JPY - Japanese yen</item>
        <item>JOD - Jordanian dinar</item>
        <item>KZT - Kazakh tenge</item>
        <item>KES - Kenyan shilling</item>
        <item>KWD - Kuwaiti dinar</item>
        <item>KGS - Kyrgyz som</item>
        <item>LAK - Lao kip</item>
        <item>LVL - Latvian lats</item>
        <item>LBP - Lebanese pound</item>
        <item>LSL - Lesotho loti</item>
        <item>LRD - Liberian dollar</item>
        <item>LYD - Libyan dinar</item>
        <item>LTL - Lithuanian litas</item>
        <item>MOP - Macao SAR pataca</item>
        <item>MKD - Macedonian denar</item>
        <item>MGA - Malagasy ariary</item>
        <item>MWK - Malawi kwacha</item>
        <item>MVR - Maldivian rufiyaa</item>
        <item>MRO - Mauritanian ouguiya</item>
        <item>MUR - Mauritius rupee</item>
        <item>MXN - Mexican peso</item>
        <item>MDL - Moldovan leu</item>
        <item>MNT - Mongolian tugrik</item>
        <item>MAD - Moroccan dirham</item>
        <item>MZN - Mozambique new metical</item>
        <item>MMK - Myanmar kyat</item>
        <item>NAD - Namibian dollar</item>
        <item>NPR - Nepalese rupee</item>
        <item>ANG - Netherlands Antillian guilder</item>
        <item>NZD - New Zealand dollar</item>
        <item>NIO - Nicaraguan cordoba oro</item>
        <item>NGN - Nigerian naira</item>
        <item>KPW - North Korean won</item>
        <item>NOK - Norwegian krone</item>
        <item>OMR - Omani rial</item>
        <item>PKR - Pakistani rupee </item>
        <item>XPD - Palladium (ounce)</item>
        <item>PAB - Panamanian balboa</item>
        <item>PGK - Papua New Guinea kina</item>
        <item>PYG - Paraguayan guarani</item>
        <item>PEN - Peruvian nuevo sol</item>
        <item>PHP - Philippine peso</item>
        <item>XPT - Platinum (ounce)</item>
        <item>PLN - Polish zloty</item>
        <item>QAR - Qatari rial</item>
        <item>RON - Romanian new leu</item>
        <item>RUB - Russian ruble</item>
        <item>RWF - Rwandan franc</item>
        <item>SHP - Saint Helena pound</item>
        <item>WST - Samoan tala</item>
        <item>STD - Sao Tome and Principe dobra</item>
        <item>SAR - Saudi riyal</item>
        <item>RSD - Serbian dinar</item>
        <item>SCR - Seychelles rupee</item>
        <item>SLL - Sierra Leone leone</item>
        <item>XAG - Silver (ounce)</item>
        <item>SGD - Singapore dollar</item>
        <item>SBD - Solomon Islands dollar</item>
        <item>SOS - Somali shilling</item>
        <item>ZAR - South African rand</item>
        <item>KRW - South Korean won</item>
        <item>LKR - Sri Lanka rupee</item>
        <item>SDG - Sudanese pound</item>
        <item>SRD - Suriname dollar</item>
        <item>SZL - Swaziland lilangeni</item>
        <item>SEK - Swedish krona</item>
        <item>SYP - Syrian pound</item>
        <item>TWD - Taiwan New dollar</item>
        <item>TJS - Tajik somoni </item>
        <item>TZS - Tanzanian shilling</item>
        <item>TOP - Tongan pa\'anga</item>
        <item>TTD - Trinidad and Tobago dollar</item>
        <item>TND - Tunisian dinar</item>
        <item>TRY - Turkish lira</item>
        <item>TMT - Turkmen new manat</item>
        <item>UGX - Uganda new shilling</item>
        <item>XFU - UIC franc</item>
        <item>UAH - Ukrainian hryvnia</item>
        <item>UYU - Uruguayan peso uruguayo</item>
        <item>UZS - Uzbekistani sum</item>
        <item>VUV - Vanuatu vatu</item>
        <item>VEF - Venezuelan bolivar fuerte</item>
        <item>VND - Vietnamese dong</item>
        <item>YER - Yemeni rial</item>
        <item>ZMK - Zambian kwacha</item>
        <item>ZWL - Zimbabwe dollar</item>
    </string-array>


</resources>
